--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,11 @@ services:
       - "mysql:/var/lib/mysql"
     tty: true
 
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+
   maildev:
     image: djfarrelly/maildev
     env_file: docker-env
