--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -50,7 +50,7 @@ RUN \
 
 # Install grunt-cli globally
 RUN \
-    curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.5/install.sh | bash && \
+    curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.8/install.sh | bash && \
     export NVM_DIR="$HOME/.nvm" && \
     [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" && \
     [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion" && \
@@ -58,6 +58,7 @@ RUN \
     nvm use node && \
     npm install -g grunt-cli
 
+# Install and activate SSL
 RUN \
     a2enmod ssl; \
     mkdir -p /etc/ssl/private/ /etc/ssl/certs/ && \
