--- a/web/bash_aliases.dist
+++ b/web/bash_aliases.dist
@@ -1,13 +1,13 @@
 # COLORS
 export LS_COLORS='rs=0:di=01;34:ln=01;36:mh=00:pi=40;33'
-export PS1='\e[0;31m\u\e[1;37m@\e[0;32m\h\e[1;37m@\e[1;34mdocker:\e[1;33m\W\e[0m\$ '
 export CLICOLOR=1
 
 # SYMFONY
-alias sf='php app/console'
-alias schema-dump='php app/console doctrine:schema:update --dump-sql'
-alias schema-force='php app/console doctrine:schema:update --force'
-alias assets-install='php app/console assets:install --symlink'
+alias sfapp='php app/console'
+alias sfbin='php app/console'
+alias schema-dump='doctrine:schema:update --dump-sql'
+alias schema-force='doctrine:schema:update --force'
+alias assets-install='assets:install --symlink'
 
 # DOCKER
 docker-go() {
