--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - "443:443"
     volumes:
       - "~/www:/var/www/html:rw,delegated"
+      #- "~/www/logs:/var/logs"
     tty: true
 
   mysql:
