--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -32,19 +32,21 @@ RUN \
         openjdk-7-jdk && \
     docker-php-ext-install -j$(nproc) \
         bcmath \
-        gd \
         hash \
         intl \
         mcrypt \
         opcache \
         pdo_mysql \
         soap \
+        sockets \
         zip \
     && yes | pecl install xdebug \
     && docker-php-ext-enable xdebug \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* \
-    && perl -pi -e "s/mailhub=mail/mailhub=maildev/" /etc/ssmtp/ssmtp.conf
+    && perl -pi -e "s/mailhub=mail/mailhub=maildev/" /etc/ssmtp/ssmtp.conf \
+    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+    && docker-php-ext-install -j$(nproc) gd
 
 # Install Composer globally
 RUN \
