[branch/5.6] reup master features

--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,6 +1,6 @@
 FROM percona:5.6
 
-MAINTAINER Matthieu CONTET <matt.tete.nock@gmail.com>
-LABEL maintainer="Matthieu CONTET <matt.tete.nock@gmail.com>"
+MAINTAINER Matthieu CONTET <matt.contet@icloud.com>
+LABEL maintainer="Matthieu CONTET <matt.contet@icloud.com>"
 
 COPY custom.cnf /etc/mysql/conf.d
