[master] add make package

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -21,6 +21,7 @@ RUN \
         mailutils \
         ssh-client \
         ssmtp \
+        make \
         mysql-client \
         openssl \
         cron \
