--- a/web/custom.ini
+++ b/web/custom.ini
@@ -27,4 +27,5 @@ opcache.max_accelerated_files = 32531
 opcache.memory_consumption = 256
 opcache.save_comments = 1
 opcache.revalidate_freq = 0
+;opcache.revalidate_freq = 3600
 opcache.validate_timestamps = 1
