--- a/docker-env.dist
+++ b/docker-env.dist
@@ -4,3 +4,7 @@ MYSQL_ROOT_PASSWORD=
 MYSQL_USER=
 MYSQL_PASSWORD=
 MYSQL_DATABASE=
+
+##### PHP
+PHP_IDE_CONFIG=serverName=environment
+XDEBUG_CONFIG=remote_host= idekey=PHPSTORM remote_port=9001 remote_enable=1 remote_connect_back=0
