--- a/web/bash_aliases.dist
+++ b/web/bash_aliases.dist
@@ -11,18 +11,21 @@ alias assets-install='assets:install --symlink'
 
 # DOCKER
 docker-go() {
-    docker exec -it "$(basename $PWD)_$1_1" /bin/bash
+    docker-compose exec $1 bash
 }
 docker-logs() {
     docker-compose logs $1
 }
 docker-rebuild() {
     echo -------------------------------------------------- docker-compose build --------------------------------------------------
-    docker-compose build $1
+    docker-compose build --no-cache $1
     echo -------------------------------------------------- docker-compose up -d --------------------------------------------------
     docker-compose up -d $1
     echo -------------------------------------------------- docker-compose ps -----------------------------------------------------
     docker-compose ps
+}
+docker-up() {
+    docker-compose up -d $1
 }
 docker-start() {
     docker-compose start $1
