--- a/web/custom.ini
+++ b/web/custom.ini
@@ -29,3 +29,14 @@ opcache.save_comments = 1
 opcache.revalidate_freq = 0
 ;opcache.revalidate_freq = 3600
 opcache.validate_timestamps = 1
+
+[xdebug]
+xdebug.idekey = PHPSTORM
+xdebug.default_enable = 0
+xdebug.remote_enable = 1
+xdebug.remote_autostart = 0
+xdebug.remote_connect_back = 0
+xdebug.profiler_enable = 0
+xdebug.remote_port = 9001
+xdebug.max_nesting_level = 700
+;xdebug.remote_host =
