--- a/web/custom.ini
+++ b/web/custom.ini
@@ -21,10 +21,22 @@ opcache.error_log = "/var/log/apache2/opcache.log"
 opcache.fast_shutdown = 1
 opcache.force_restart_timeout = 600
 opcache.interned_strings_buffer = 32
-opcache.load_comments = 1
+opcache.load_comments = 0
 opcache.log_verbosity_level = 4
 opcache.max_accelerated_files = 32531
 opcache.memory_consumption = 256
 opcache.save_comments = 1
 opcache.revalidate_freq = 0
+;opcache.revalidate_freq = 3600
 opcache.validate_timestamps = 1
+
+[xdebug]
+xdebug.idekey = PHPSTORM
+xdebug.default_enable = 0
+xdebug.remote_enable = 1
+xdebug.remote_autostart = 0
+xdebug.remote_connect_back = 0
+xdebug.profiler_enable = 0
+xdebug.remote_port = 9001
+xdebug.max_nesting_level = 700
+;xdebug.remote_host =
