--- a/web/custom.ini.dist
+++ b/web/custom.ini.dist
@@ -21,7 +21,7 @@ opcache.error_log = "/var/log/apache2/opcache.log"
 opcache.fast_shutdown = 1
 opcache.force_restart_timeout = 600
 opcache.interned_strings_buffer = 32
-opcache.load_comments = 0
+opcache.load_comments = 1
 opcache.log_verbosity_level = 4
 opcache.max_accelerated_files = 32531
 opcache.memory_consumption = 256
@@ -39,4 +39,4 @@ xdebug.remote_connect_back = 0
 xdebug.profiler_enable = 0
 xdebug.remote_port = 9001
 xdebug.max_nesting_level = 700
-;xdebug.remote_host =
+xdebug.remote_host =
