--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     tty: true
 
   mysql:
-    image: mysql:5.7
+    build: mysql
     env_file: docker-env
     ports:
       - 3306:3306
