--- a/docker-env.dist
+++ b/docker-env.dist
@@ -7,4 +7,4 @@ MYSQL_DATABASE=
 
 ##### PHP
 PHP_IDE_CONFIG=serverName=environment
-XDEBUG_CONFIG=remote_host= idekey=PHPSTORM remote_port=9001 remote_enable=1 remote_connect_back=0
+XDEBUG_CONFIG=remote_host=host.docker.internal idekey=PHPSTORM remote_port=9001 remote_enable=1 remote_connect_back=0
