--- a/web/x-custom.ini.dist
+++ b/web/x-custom.ini.dist
@@ -41,4 +41,4 @@ xdebug.remote_connect_back = 0
 xdebug.profiler_enable = 0
 xdebug.remote_port = 9001
 xdebug.max_nesting_level = 700
-xdebug.remote_host =
+;xdebug.remote_host =
